  the `namedtuple` of the same name

- New class :class:`rpy2.robjects.converter.ConversionContext`. This is
  a context manager allowing an easy setting of local conversion rules.
  The constructor has an alias called
  :meth:`rpy2.robjects.constructor.localconverter`.

- New module :mod:`rpy2.robjects.lib.dplyr` providing a custom
  wrapper for the R library `dplyr`

- method :method:`Environment.items()` to iterate through the symbols
  and associated objects in an R environment.

Bugs fixed
----------

- Conversion rules were not applied when parsing and evaluating string
  as R with :class:`rpy2.robjects.R`.

- Calling the constructor for :class:`rpy2.robjects.vectors.FactorVector`
  with an R factor is no longer making a copy, loosing the associated
  R attributes if any (fixes issue #299).

Changes
-------

- :func:`rpy2.rinterface.is_initialized` is now a function.

Release 2.6.2
=============

Bugs fixed
----------
 
- Check that R >= 3.2 is used at build time (issue #291)

- Conversion rules were not applied when parsing and evaluating string
  as R code with :class:`rpy2.robjects.R`.


Release 2.6.1
=============

New features
------------

- Because of their long names, the classes
  :class:`SignatureTranslatedAnonymousPackage`,
  :class:`SignatureTranslatedPackage`, and
  :class:`SignatureTranslatedFunction`
  in :mod:`rpy2.robjects.packages` have now the aliases
  :class:`STAP`, :class:`STP`, and :class:`STF` respectively.

Bugs fixed
----------

- Typo in function name emitting warnings at build time (issue #283)
 
- The conversion of `TaggedList` instances is now handling the names
  of items in the list (issue #286)


Changes
-------

- Loading the `ipython` extension in the absence of `pandas` or `numpy`
  is now issuing a warning (issue #279)
  
  
Release 2.6.0
=============

New features
------------

- Report the existence during build time of a file `.Renviron`,
  or the definition of the environment variables `R_ENVIRON' or